# cq-safety

./: .gitignore  .safety-policy.yml  404.html  Makefile  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  security.yml
ci-cd/github-actions/: index.html
ci-cd/gitlab-ci/: index.html
ci-cd/pre-commit/: index.html
docs/: index.md
docs/ci-cd/: github-actions.md  gitlab-ci.md  pre-commit.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: cli.md  exit-codes.md  troubleshooting.md
docs/usage/: ignoring.md  output-formats.md  policy-files.md  scanning.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/cli/: index.html
reference/exit-codes/: index.html
reference/troubleshooting/: index.html
search/: search_index.json
usage/ignoring/: index.html
usage/output-formats/: index.html
usage/policy-files/: index.html
usage/scanning/: index.html
